added comments to set and get